potential pathing fix?

--- a/index.html
+++ b/index.html
@@ -4,8 +4,8 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" href="../styles/styles.css">
-  <script src="../scripts/components/header.js" type="text/javascript" defer></script>
-  <script src="../scripts/components/footer.js" type="text/javascript" defer></script>
+  <script src="scripts/components/header.js" type="text/javascript" defer></script>
+  <script src="scripts/components/footer.js" type="text/javascript" defer></script>
   <title>KEA Restaurant - Home</title>
 </head>
 <body>
