--- a/index.html
+++ b/index.html
@@ -9,7 +9,9 @@
   <title>KEA Restaurant - Home</title>
 </head>
 <body>
- <header-component></header-component>
+ <header>
+  <header-component></header-component>
+</header>
   <main>
     <section>
       We provide a wide variety of fine dishes and beverages at moderate prices. Located in one of the trendiest areas of Copenhagen, Restaurant KEA has been at the forefront of Denmark's culinary life for the past decade. Let us take you on a journey of taste that you will never forget. You will not only not regret it, but you will feel an urge to spread the good news around to your friends and family. So amazing is the food experience at Restaurant KEA. We look forward to serving you.
@@ -48,7 +50,9 @@
       </blockquote>
     </section>
   </main>
-  <footer-component></footer-component>
+  <footer>
+    <footer-component></footer-component>
+  </footer>
 </body>
 <!--
            _.-''     ``-._
