removed CSS and JS

--- a/index.html
+++ b/index.html
@@ -10,7 +10,20 @@
 </head>
 <body>
  <header>
-  <header-component></header-component>
+  <h1>Restaurant KEA</h1>
+    <nav>
+      <ul>
+        <li>
+          <a href="/">Home</a>
+        </li>
+        <li>
+          <a href="/views/menu.html">Menu</a>
+        </li>
+        <li>
+          <a href="/views/contact.html">Contact</a>
+        </li>
+      </ul>
+    </nav>
 </header>
   <main>
     <section>
@@ -51,7 +64,7 @@
     </section>
   </main>
   <footer>
-    <footer-component></footer-component>
+    <p>&copy; 2023 KEA Development</p>
   </footer>
 </body>
 <!--
