--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
       </ul>
     </section>
     <section>
-      <img src="./assets/restaurant_assets/img/kea_restaurant.jpg" width="500" alt="KEA restaurant"/> 
+      <img src="/assets/restaurant_assets/img/kea_restaurant.jpg" width="500" alt="KEA restaurant"/> 
     </section>
     <section>
       <blockquote>
