trying relative pathing

--- a/index.html
+++ b/index.html
@@ -3,7 +3,6 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <base href="/KEA-Restaurant/"/>
   <title>KEA Restaurant - Home</title>
 </head>
 <body>
@@ -15,10 +14,10 @@
           <a href="/">Home</a>
         </li>
         <li>
-          <a href="/views/menu.html">Menu</a>
+          <a href="../views/menu.html">Menu</a>
         </li>
         <li>
-          <a href="/views/contact.html">Contact</a>
+          <a href="../views/contact.html">Contact</a>
         </li>
       </ul>
     </nav>
@@ -50,7 +49,7 @@
       </ul>
     </section>
     <section>
-      <img src="/assets/restaurant_assets/img/kea_restaurant.jpg" width="500" alt="KEA restaurant"/> 
+      <img src="assets/restaurant_assets/img/kea_restaurant.jpg" width="500" alt="KEA restaurant"/> 
     </section>
     <section>
       <blockquote>
