--- a/index.html
+++ b/index.html
@@ -14,10 +14,10 @@
           <a href="/">Home</a>
         </li>
         <li>
-          <a href="../views/menu.html">Menu</a>
+          <a href="./views/menu.html">Menu</a>
         </li>
         <li>
-          <a href="../views/contact.html">Contact</a>
+          <a href="./views/contact.html">Contact</a>
         </li>
       </ul>
     </nav>
