anchor tag titles

--- a/index.html
+++ b/index.html
@@ -11,13 +11,13 @@
     <nav>
       <ul>
         <li>
-          <a href="./">Home</a>
+          <a href="./" title="Home">Home</a>
         </li>
         <li>
-          <a href="./views/menu.html">Menu</a>
+          <a href="./views/menu.html" title="Menu">Menu</a>
         </li>
         <li>
-          <a href="./views/contact.html">Contact</a>
+          <a href="./views/contact.html" title="Contact">Contact</a>
         </li>
       </ul>
     </nav>
