--- a/index.html
+++ b/index.html
@@ -49,14 +49,14 @@
       </ul>
     </section>
     <section>
-      <img src="assets/restaurant_assets/img/kea_restaurant.jpg" width="500" alt="KEA restaurant"/> 
+      <img src="assets/restaurant_assets/img/kea_restaurant.jpg" alt="KEA restaurant"> 
     </section>
     <section>
       <blockquote>
         Dining at Restaurant KEA has truly been one of the greatest experiences of my life. Words cannot express the pleasure that I felt while tasting these amazing flavours. It makes all other restaurants pale in comparison, in Denmark and elsewhere.
       </blockquote>
       <blockquote>
-        -Mette J. Christensen, <i>The Food Connoisseur</i>
+        -Mette J. Christensen, <em>The Food Connoisseur</em>
       </blockquote>
     </section>
   </main>
